src/objects/SomTv_Externer_Betreuer__c.object
<CustomObject>
    <fields>
        <fullName>SomTv_Agentur__c</fullName>
        <description>Firma des Betreuers</description>
        <formula>SomTv_Externer_Betreuer__r.Account.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Firma des Betreuers</inlineHelpText>
        <label>Agentur</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomTv_Beschreibung__c</fullName>
        <label>Beschreibung</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SomTv_Externer_Betreuer__c</fullName>
        <description>Referenz auf den Kontakt der als externer Betreuer in der ausgewählten Rolle zu diesem Account agiert.</description>
        <inlineHelpText>Referenz auf den Kontakt der als externer Betreuer in der ausgewählten Rolle zu diesem Account agiert.</inlineHelpText>
        <label>Externer Betreuer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Externe Betreuer</relationshipLabel>
        <relationshipName>Externe_Betreuer</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SomTv_Kunde__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Betreuter Kunde</description>
        <inlineHelpText>Betreuter Kunde</inlineHelpText>
        <label>Kunde</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Externe Betreuer</relationshipLabel>
        <relationshipName>Externe_Betreuer</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SomTv_Rolle__c</fullName>
        <inlineHelpText>Es handelts sich um einen Kontakt von der Agentur mit Zuständigkeit innerhalb der Agentur für einen bestimmten Werbungstreibenden.</inlineHelpText>
        <label>Rolle</label>
        <picklist>
            <picklistValues>
                <fullName>Einkäufer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Optimierer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Planer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Motiv-Bearbeiter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sonstiges</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agenturgeschäftsführer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SomTv_Tel__c</fullName>
        <formula>SomTv_Externer_Betreuer__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tel</label>
        <type>Text</type>
    </fields>
    <label>Externer Betreuer</label>
    <listViews>
        <fullName>Alle</fullName>
        <columns>SomTv_Externer_Betreuer__c</columns>
        <columns>SomTv_Agentur__c</columns>
        <columns>SomTv_Beschreibung__c</columns>
        <columns>SomTv_Kunde__c</columns>
        <columns>SomTv_Rolle__c</columns>
        <columns>SomTv_Tel__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Alle</label>
        <language>de</language>
    </listViews>
    <nameField>
        <displayFormat>EXB-{0000}</displayFormat>
        <label>Externer Betreuer-Nr</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Externe Betreuer</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>